--- a/ecommerce-angular/src/app/pages/login/signup/signup.component.scss
+++ b/ecommerce-angular/src/app/pages/login/signup/signup.component.scss
@@ -52,7 +52,9 @@ h2{
          .wide-field {
           width: 45%;
           } 
-
+          .alert{
+            color: red;
+          }
           mat-label{
             opacity: 0.5;
             
