fix: correct label in signup form HTML

--- a/ecommerce-angular/src/app/pages/login/signup/signup.component.html
+++ b/ecommerce-angular/src/app/pages/login/signup/signup.component.html
@@ -61,7 +61,7 @@
 
    <mat-form-field appearance="outline" class="wide-field">
     <mat-label>Phone number</mat-label>
-    <input matInput formControlName="fullName" />
+    <input matInput formControlName="phone" />
     <mat-error *ngIf="signupForm.get('phone')?.hasError('required')" class="alert">
     Please enter a valid phone number
   </mat-error>
