--- a/ecommerce-angular/src/app/pages/login/signup/signup.component.html
+++ b/ecommerce-angular/src/app/pages/login/signup/signup.component.html
@@ -90,7 +90,8 @@
   </div>
 </div>
 
-<div>
+
+<div class="submitBtn">
  <app-button
   label="Create Account"
   appearance="primary"
@@ -98,6 +99,7 @@
   customClass="signup-button">
 </app-button>
 </div>
+
 
 </form>
 <div style="margin-top: 10px;">
