feat: create forgot password page

--- a/ecommerce-angular/src/app/pages/login/forgot-password/forgot-password.component.scss
+++ b/ecommerce-angular/src/app/pages/login/forgot-password/forgot-password.component.scss
@@ -4,12 +4,10 @@
     align-items: start;
     gap:50px;
     margin: 10px;
-    padding: 20px;
+    padding: 10px;
     border-radius: 15px;
   border: 2px solid #DBDBDB;
-    box-shadow: 10px 10px 5px 12px DBDBDB;
-
-
+    box-shadow: 10px 10px 5px 12px #DBDBDB;
 h1{
 color: #484848;
 font-weight: 400;
@@ -30,12 +28,8 @@ h2{
     width: 50%;
     display: flex;
     flex-direction: column;
-.or{
-    color: #838383;
-    font-size: 25px;
-    font-weight: 600;
-    margin-top: 25px;
-}
+    gap: 50px;
+
 .form{
     display: flex;
     flex-direction: column;
@@ -52,7 +46,7 @@ h2{
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        
+        gap: 30px;
         .formInputsEachRow{
             display: flex;
             width: 90%;
@@ -65,30 +59,13 @@ h2{
             opacity: 0.5;
             
         }  
-         .wide-field  {
-        width: 90%;         
-         }
         }
         
     }
-     .submitBtnCont{
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            gap: 20px;
-        }
-        .forgot{
-            display: flex;
-            justify-content: flex-end;
-           
-        }
-}
-       
 }
 }
 
-
+}
 @media (max-width: 1144px) {
     .container{
         flex-direction: column-reverse;
@@ -98,16 +75,10 @@ h2{
         
         .imgContainer{
             width: 100%;
-            
         }
         .formContainer{
             width: 100%;
-            .form{
-            .formBtns{
-        flex-direction: column;
-        gap: 30px;
-            }
-        
+
         .formInputs{
             .formInputsEachRow{
                 flex-direction: column;
@@ -119,12 +90,20 @@ h2{
                  }
               }
         }
-       
     }
     
-        
-    }
+        .submitBtn{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            
+        }
     
+    .formBtns{
+    flex-direction: column !important;
+    gap: 30px;
+    }
    }
-   
 }
+    
+
