feat(auth): add routing for signup, signin, forgot password and update button styles in signin page

--- a/ecommerce-angular/src/app/pages/login/forgot-password/forgot-password.component.html
+++ b/ecommerce-angular/src/app/pages/login/forgot-password/forgot-password.component.html
@@ -1,7 +1,7 @@
 
 <div class="container">
 <div class="imgContainer">
-  <img src="images/allan-lainez-n7hd4Lo3Lt8-unsplash.jpg" alt="Sign Up Banner" />
+  <img src="images/yiran-ding-AX_yrsyYOso-unsplash.jpg" alt="Sign Up Banner" />
 </div>
 
 <div class="formContainer">
@@ -62,8 +62,10 @@
 
 </form>
 <div style="margin-top: 10px;">
-  Already have an account? <span style="color: #5B86E5;cursor: pointer;">Login</span>
-</div>
+  Already have an account? 
+    <a (click)="goToSignin()" style="color: #5B86E5; text-decoration: none; font-weight: 600; cursor: pointer;">
+</a>
+  </div>
 </div>
 
 
