--- a/ecommerce-angular/src/app/pages/login/login/login.component.html
+++ b/ecommerce-angular/src/app/pages/login/login/login.component.html
@@ -1,7 +1,7 @@
 
 <div class="container">
 <div class="imgContainer">
-  <img src="images/allan-lainez-n7hd4Lo3Lt8-unsplash.jpg" alt="Sign Up Banner" />
+  <img src="images/yiran-ding-AX_yrsyYOso-unsplash.jpg" alt="Sign Up Banner" />
 </div>
 
 <div class="formContainer">
@@ -69,13 +69,13 @@
   label="Register Now"
   appearance="primary"
   type="submit"
-  customClass="signup-button">
+  customClass="register-now-button">
 </app-button>
 </div>
 </div>
 </form>
-<div style="margin-top: 10px;color: #5B86E5; font-weight: 600;" class="forgot">
-  Forgot Password?
+<div style="margin-top: 10px;color: #5B86E5; font-weight: 600; cursor: pointer;" class="forgot">
+ <a (click)="goToForgotPass()">Forgot Password?</a>
 </div>
 </div>
 
