--- a/ecommerce-angular/src/app/pages/login/signup/signup.component.html
+++ b/ecommerce-angular/src/app/pages/login/signup/signup.component.html
@@ -101,8 +101,12 @@
 
 </form>
 <div style="margin-top: 10px;">
-  Already have an account? <span style="color: #5B86E5;">Login</span>
+  Already have an account?
+  <a (click)="goToSignin()" style="color: #5B86E5; text-decoration: none; font-weight: 600; cursor: pointer;">
+    Login
+  </a>
 </div>
+
 </div>
 
 
