--- a/ecommerce-angular/src/app/pages/login/forgot-password/forgot-password.component.html
+++ b/ecommerce-angular/src/app/pages/login/forgot-password/forgot-password.component.html
@@ -64,6 +64,7 @@
 <div style="margin-top: 10px;">
   Already have an account? 
     <a (click)="goToSignin()" style="color: #5B86E5; text-decoration: none; font-weight: 600; cursor: pointer;">
+      signin
 </a>
   </div>
 </div>
