--- a/ecommerce-angular/src/app/pages/login/forgot-password/forgot-password.component.scss
+++ b/ecommerce-angular/src/app/pages/login/forgot-password/forgot-password.component.scss
@@ -1,13 +1,14 @@
 .container{
-    display: flex;
-    justify-content: flex-end;
-    align-items: start;
-    gap:50px;
-    margin: 10px;
-    padding: 10px;
-    border-radius: 15px;
+    max-width: 1200px;
+  margin: 40px auto;
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 50px;
+  border-radius: 15px;
   border: 2px solid #DBDBDB;
-    box-shadow: 10px 10px 5px 12px #DBDBDB;
+  box-shadow: 10px 10px 5px 2px #DBDBDB;
 h1{
 color: #484848;
 font-weight: 400;
@@ -54,6 +55,7 @@ h2{
         
           .alert{
             color: red;
+            font-size: 12px;
           }
           mat-label{
             opacity: 0.5;
