--- a/ecommerce-angular/src/app/shared/components/button/button.component.scss
+++ b/ecommerce-angular/src/app/shared/components/button/button.component.scss
@@ -22,6 +22,10 @@ button {
   }
 }
 .signup-button{
-    width: 60%;
-   
+width: 90%;
+  max-width: 300px;
+  align-self: center;
+  font-size: 16px;
+  padding: 12px 24px;
+  border-radius: 8px;   
 }
