Add responsive footer component

--- a/ecommerce-angular/src/app/layout/footer/footer.component.html
+++ b/ecommerce-angular/src/app/layout/footer/footer.component.html
@@ -1,1 +1,36 @@
-<p>footer works!</p>
+<div class="footer">
+<div class="footerContainer1">
+<div class="footerContainer2">
+<img src="images/image 2.png" alt="">
+<div class="footerText">
+    <p>Subscribe To Our Newsletter</p>
+    <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae maiores delectus, nisi reprehenderit culpa corporis.</div>
+<input type="email" placeholder="michael@ymail.com">
+
+<app-button
+label="Subsribe Now"
+  appearance="primary"
+  type="submit"
+  customClass="submit-newPass-button"
+>Subscribe Now</app-button>
+</div>
+<img src="images/image 3.png" alt="">
+</div>
+<hr>
+<div class="underFooter">
+
+    <div class="underFooterTitle">Velora</div>
+    <div class="footerlinks">
+        <a href="">Support Center</a>
+        <a href="">Contact</a>
+        <a href="">Careers</a>
+        <a href="">Blog</a>
+        <a href="">FAQs</a>
+
+    </div>
+</div>
+<div class="copyRight">
+<p>Copyright © 2025 Velora . All Rights Reseved.</p>
+</div>
+</div>
+</div>
