--- a/ecommerce-angular/src/app/shared/components/button/button.component.scss
+++ b/ecommerce-angular/src/app/shared/components/button/button.component.scss
@@ -20,6 +20,26 @@ button {
     font-weight: 400;
     
   }
+  &:hover {
+    background-color: #ffffff;
+    color: #000000;
+    border: 2px solid #000000;
+  }
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background-color: #ffffff;
+    transition: left 1s ease;
+    z-index: -1;
+  }
+
+  &:hover::before {
+    left: 0;
+  }
 }
 .signup-button{
 width: 90%;
