--- a/ecommerce-angular/src/app/layout/footer/footer.component.scss
+++ b/ecommerce-angular/src/app/layout/footer/footer.component.scss
@@ -71,8 +71,40 @@
     p{
         color:#484848;
         font-size: 12px;
+        margin-top: 20px;
     }
 }
 }
+}
+
+@media (max-width: 1100px) {
+
+    .footerContainer2{
+    flex-direction: column;
+    gap: 25px;
+        .footerText{
+         p{
+        font-size: 25px !important;
+        }
+        div{
+        font-size: 14px !important;
+        }
+}
+    }
+    .underFooter{
+        flex-direction: column;
+
+   .footerlinks{
+    flex-wrap: wrap;
+    margin:30px 0;
+    width: 90% !important;
+    }
+    }
+}
+@media (max-width: 500px) {
+   .footerlinks{
+    font-size: 13px;
+   
+   }
 }
 
