--- a/ecommerce-angular/src/app/pages/home/brands-section/brands-section.component.scss
+++ b/ecommerce-angular/src/app/pages/home/brands-section/brands-section.component.scss
@@ -2,7 +2,7 @@
     margin-top: 20px;
     width: 100%;
     height:fit-content;
-    background-color: #484848;
+    background-color: #eceaea;
       overflow: hidden;
     .image-track {
     display: flex;
