--- a/ecommerce-angular/src/app/pages/home/home.component.html
+++ b/ecommerce-angular/src/app/pages/home/home.component.html
@@ -1,4 +1,5 @@
 <app-hero-section></app-hero-section>
 <app-brands-section></app-brands-section>
 <app-deals-section></app-deals-section>
+<app-trending-products></app-trending-products>
 <app-instagram-section></app-instagram-section>
