--- a/ecommerce-angular/src/app/pages/home/trending-products/trending-products.component.scss
+++ b/ecommerce-angular/src/app/pages/home/trending-products/trending-products.component.scss
@@ -7,19 +7,40 @@
     h2{
         font-size: 48px;
         color: #484848;
-        margin: 20px;
+        margin: 30px;
     }
 }
 .productCardContainer{
     display: flex;
     width: 100%;
-    flex-wrap: wrap;
     gap: 20px;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
+
 }
 app-product-card{
     flex: 1 1 calc(25% - 20px);
     max-width: calc(25% - 20px);
   box-sizing: border-box;
+}
+
+@media (max-width: 1200px) {
+app-product-card{
+    flex: 1 1 calc(50% - 20px);
+    max-width: calc(60% - 20px);
+  box-sizing: border-box;
+}
+}
+@media (max-width: 850px) {
+app-product-card{
+    flex: 1 1 calc(70% - 20px);
+    max-width: calc(80% - 20px);
+  box-sizing: border-box;
+}
+.trendingProductsContainer{
+h2{
+    font-size: 30px;
+}
+}
 }
