--- a/ecommerce-angular/src/app/shared/components/product-card/product-card.component.scss
+++ b/ecommerce-angular/src/app/shared/components/product-card/product-card.component.scss
@@ -9,21 +9,22 @@
   }
 
   img {
-    width: 90%;
+    width: 80%;
+    max-width: 80%;
     object-fit: cover;
   }
 
   mat-card-content {
     h2 {
-      font-size: 20px;
+      font-size: 18px;
       color: #757575;
-      margin: 10px 0 5px;
+      margin: 15px 0 15px;
   font-family: 'Poppins', sans-serif;
 
     }
     p {
-      font-size: 22px;
-      color: gray;
+      font-size: 20px;
+      color: #3E3E3E;
   font-family: 'Poppins', sans-serif;
     }
     
