feat: add ShopComponent and update routes

--- a/ecommerce-angular/src/app/pages/home/deals-section/deals-section.component.html
+++ b/ecommerce-angular/src/app/pages/home/deals-section/deals-section.component.html
@@ -1,4 +1,4 @@
-<div class="dealsContainer">
+<div class="dealsContainer" id="deals">
 
     <div class="dealsTextContainer">
         <div class="dealsTextOne">
