--- a/ecommerce-angular/src/app/pages/home/hero-section/hero-section.component.html
+++ b/ecommerce-angular/src/app/pages/home/hero-section/hero-section.component.html
@@ -1,4 +1,4 @@
-<div class="heroSection">
+<div class="heroSection" id="home">
     <div class="heroLeftImg">
  <img src="images/bave-pictures-SJDWOw4FKeo-unsplash.jpg" alt="" />
 
