--- a/ecommerce-angular/src/app/pages/home/trending-products/trending-products.component.html
+++ b/ecommerce-angular/src/app/pages/home/trending-products/trending-products.component.html
@@ -1,4 +1,4 @@
-<div class="trendingProductsContainer">
+<div class="trendingProductsContainer" id="new-arrivals">
   <h2>Trending Products</h2>
 <div class="productCardContainer">
 <app-product-card
