--- a/ecommerce-angular/src/app/layout/header/header.component.html
+++ b/ecommerce-angular/src/app/layout/header/header.component.html
@@ -1,8 +1,7 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
   <div class="container-fluid">
     <a class="navbar-brand title" routerLink="/">Velora</a>
 
-    <!-- Burger menu toggle button -->
     <button
       class="navbar-toggler"
       type="button"
@@ -17,13 +16,13 @@
     <div class="collapse navbar-collapse" id="navbarContent">
       <ul class="navbar-nav mx-auto mb-2 mb-lg-0 navBarsLinks">
         <li class="nav-item mx-3">
-          <a class="nav-link" routerLink="/">Home</a>
+          <a class="nav-link" href="#home">Home</a>
         </li>
         <li class="nav-item mx-3">
-          <a class="nav-link" routerLink="/deals">Deals</a>
+          <a class="nav-link" href="#deals">Deals</a>
         </li>
         <li class="nav-item mx-3">
-          <a class="nav-link" routerLink="/new-arrivals">New Arrivals</a>
+          <a class="nav-link" href="#new-arrivals">New Arrivals</a>
         </li>
         <li class="nav-item mx-3">
           <a class="nav-link" routerLink="/shop">Shop</a>
