--- a/ecommerce-angular/src/app/pages/home/hero-section/hero-section.component.scss
+++ b/ecommerce-angular/src/app/pages/home/hero-section/hero-section.component.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-around;
     align-items: self-start;
-    
+    margin-top: 100px;
 
     .heroLeftImg{
         width: 30%;
