--- a/ecommerce-angular/src/app/layout/header/header.component.html
+++ b/ecommerce-angular/src/app/layout/header/header.component.html
@@ -30,7 +30,7 @@
       </ul>
 
       <div class="d-flex flex-column flex-lg-row align-items-lg-center gap-2">
-          <ng-container *ngIf="!authService.isLoggedIn(); else loggedInBlock">
+          <ng-container *ngIf="!authService.isLoggedIn();">
         <a routerLink="/signin" class="btn signInBtn">Sign in</a>
         <a routerLink="/signup">
           <app-button
@@ -41,9 +41,25 @@
         </a>
         </ng-container>
       </div>
-      <ng-template #loggedInBlock>
-    <button class="btn btn-dark" (click)="logout()">Logout</button>
-  </ng-template>
+      <ng-container *ngIf="authService.isLoggedIn();">
+    <!-- Profile icon -->
+    <a routerLink="/profile" class="nav-icon">
+      <img src="assets/icons/user.svg" alt="Profile" />
+    </a>
+
+    <!-- Search icon -->
+    <a routerLink="/search" class="nav-icon">
+      <img src="assets/icons/search.svg" alt="Search" />
+    </a>
+
+    <!-- Cart icon -->
+    <a routerLink="/cart" class="nav-icon">
+      <img src="assets/icons/cart.svg" alt="Cart" />
+    </a>
+
+    <!-- Logout link -->
+    <button class="btn btn-outline-danger" (click)="logout()">Logout</button>
+  </ng-container>
     </div>
   </div>
 </nav>
