--- a/ecommerce-angular/src/app/layout/header/header.component.scss
+++ b/ecommerce-angular/src/app/layout/header/header.component.scss
@@ -22,3 +22,10 @@ $color-dark-text: #484848;
     color: $color-dark-text;
 
 }
+.HeaderIcons{
+    a{
+        color: #484848;
+        padding: 5px;
+        
+    }
+}
