Add product details component and route navigation by product ID

--- a/ecommerce-angular/src/app/pages/home/trending-products/trending-products.component.html
+++ b/ecommerce-angular/src/app/pages/home/trending-products/trending-products.component.html
@@ -6,7 +6,9 @@
   [image]="product.image"
   [title]="product.title"
   [desc]="product.description"
-  [price]="product.price">
+  [price]="product.price"
+  [productId]="product.id">
+
 </app-product-card>
 </div>
 </div>
