--- a/ecommerce-angular/src/app/shared/components/product-card/product-card.component.html
+++ b/ecommerce-angular/src/app/shared/components/product-card/product-card.component.html
@@ -1,3 +1,4 @@
+<a [routerLink]="['/product', productId]" style="cursor: pointer;">
 <mat-card class="deal-card">
   <img mat-card-image [src]="image" [alt]="title" />
   <mat-card-content>
@@ -13,3 +14,4 @@
     ></app-button>
   </mat-card-actions>
 </mat-card>
+</a>
