--- a/ecommerce-angular/src/app/pages/shop/shop.component.html
+++ b/ecommerce-angular/src/app/pages/shop/shop.component.html
@@ -40,7 +40,8 @@
       [title]="product.title"
       [desc]="product.description"
       [price]="product.price"
-      [image]="product.image">
+      [image]="product.image"
+      [productId]="product.id">
     </app-product-card>
   </div>
 </div>
