feat: add the features on product details page

--- a/ecommerce-angular/src/app/pages/product-details/product-details.component.html
+++ b/ecommerce-angular/src/app/pages/product-details/product-details.component.html
@@ -55,4 +55,8 @@ Free Shipping & Returns: On all orders over $75
 
 </div>
 
+<div class="featuresSection">
+<img src="images/features.png" alt="">
+</div>
+
 <app-footer></app-footer>
