--- a/ecommerce-angular/src/app/pages/product-details/product-details.component.scss
+++ b/ecommerce-angular/src/app/pages/product-details/product-details.component.scss
@@ -102,3 +102,12 @@
   }
 }
 
+.featuresSection{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  img{
+    width: 100%;
+    object-fit: cover;
+  }
+}
