--- a/ecommerce-angular/src/app/pages/product-details/product-details.component.scss
+++ b/ecommerce-angular/src/app/pages/product-details/product-details.component.scss
@@ -111,3 +111,22 @@
     object-fit: cover;
   }
 }
+@media (max-width: 1020px) {
+.product-details-container{
+flex-direction: column;
+align-items: center;
+gap: 50px;
+.productImg{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    img{
+      width: 60%;
+    }
+  }
+  .productDetailsContainer{
+  width: 90%;
+  }
+}
+}
