feat: make fashion love section for shop and product details page

--- a/ecommerce-angular/src/app/pages/product-details/product-details.component.html
+++ b/ecommerce-angular/src/app/pages/product-details/product-details.component.html
@@ -58,5 +58,6 @@ Free Shipping & Returns: On all orders over $75
 <div class="featuresSection">
 <img src="images/features.png" alt="">
 </div>
+<app-find-fashion-section></app-find-fashion-section>
 
 <app-footer></app-footer>
