--- a/ecommerce-angular/src/app/pages/shop/shop.component.html
+++ b/ecommerce-angular/src/app/pages/shop/shop.component.html
@@ -55,6 +55,6 @@
   </nav>
   </div>
 </div>
-
+<app-find-fashion-section></app-find-fashion-section>
 <app-instagram-section></app-instagram-section>
 <app-footer></app-footer>
