fix: remvoe the button component from all the carts

--- a/ecommerce-angular/src/app/shared/components/product-card/product-card.component.html
+++ b/ecommerce-angular/src/app/shared/components/product-card/product-card.component.html
@@ -8,10 +8,10 @@
   <mat-card-actions>
     <p class="price">${{ price }}</p>
 
-    <app-button
+    <!-- <app-button
     label="Add to Cart"
   appearance="primary"
-    ></app-button>
+    ></app-button> -->
   </mat-card-actions>
 </mat-card>
 </a>
