Implement cart icon count and connect add-to-cart functionality

--- a/ecommerce-angular/src/app/pages/product-details/product-details.component.html
+++ b/ecommerce-angular/src/app/pages/product-details/product-details.component.html
@@ -46,6 +46,7 @@ class="color-circle"
 <app-button
 label="Add to Cart"
 appearance="primary"
+(click)="handleAddToCart()"
 ></app-button>
 </div>
 <div class="shipping">
