--- a/ecommerce-angular/src/app/layout/header/header.component.html
+++ b/ecommerce-angular/src/app/layout/header/header.component.html
@@ -45,8 +45,11 @@
 <i class="bi bi-person"></i>
   </a>
   <!-- Cart Icon -->
-  <a routerLink="/cart" class="nav-icon me-3">
-<i class="bi bi-bag"></i>
+  <a routerLink="/cart" class="nav-icon me-3 position-relative">
+<i class="bi bi-bag fs-5"></i>
+<span *ngIf="cartCount > 0" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+  {{cartCount}}
+</span>
   </a>
 
   <!-- Logout Button -->
