--- a/ecommerce-angular/src/app/pages/cart/cart.component.html
+++ b/ecommerce-angular/src/app/pages/cart/cart.component.html
@@ -1,9 +1,13 @@
 <app-header></app-header>
-
+<div class="container">
 <div class="shoppingCart">
     <div class="title">
 <h2>Shopping Cart</h2>
 </div>
+<div *ngIf="cartItems.length===0; else cartTable" class="empty">
+  Your cart is empty.
+</div>
+<ng-template #cartTable>
 <div class="cartContainer">
 <table mat-table [dataSource]="cartItems" class="mat-elevation-z8">
 
@@ -12,20 +16,22 @@
     <th mat-header-cell *matHeaderCellDef> Product </th>
     <td mat-cell *matCellDef="let item"> 
         <div class="product-cell">
-            <img [src]="item.image">
+            <img [src]="item.product.image">
             <div class="product-details">
-                <p class="product-title">{{item.title}}</p>
+                <p class="product-title">{{item.product.title}}</p>
+                <p class="">size:{{item.size}}</p>
+               <p [style.color]="item.color">color</p>
                 <a (click)="removeItem(item)" class="remove-link">remove</a>
             </div>
         </div>
     </td>
-    <td mat-footer-cell *matFooterCellDef> Total </td>
+    <td mat-footer-cell *matFooterCellDef> Subtotal </td>
   </ng-container>
 
   <!-- Price Column -->
   <ng-container matColumnDef="cost">
     <th mat-header-cell *matHeaderCellDef> Price </th>
-    <td mat-cell *matCellDef="let item"> ${{item.price}} </td>
+    <td mat-cell *matCellDef="let item"> ${{item.product.price}} </td>
     <td mat-footer-cell *matFooterCellDef> </td>
   </ng-container>
 
@@ -40,7 +46,7 @@
   <ng-container matColumnDef="total">
     <th mat-header-cell *matHeaderCellDef> Total </th>
     <td mat-cell *matCellDef="let item">
-      {{ item.price*item.quantity }}
+      ${{ item.product.price*item.quantity }}
     </td>
     <td mat-footer-cell *matFooterCellDef> {{ getTotalCost() | currency }} </td>
   </ng-container>
@@ -58,6 +64,9 @@
       appearance="primary">
     </app-button>
   </a>
+</div>
+</ng-template>
+
 </div>
 
 </div>
