--- a/ecommerce-angular/src/app/layout/header/header.component.html
+++ b/ecommerce-angular/src/app/layout/header/header.component.html
@@ -32,7 +32,7 @@
       <!-- Right side of navbar -->
       <div class="d-flex align-items-center gap-3">
         <!-- If NOT logged in: show Sign in / Sign up -->
-        <ng-container>
+        <ng-container *ngIf="authService.isLoggedIn(); else guestButtons">
           <div class="HeaderIcons">
  
 
