--- a/ecommerce-angular/src/app/pages/checkout/checkout.component.html
+++ b/ecommerce-angular/src/app/pages/checkout/checkout.component.html
@@ -78,10 +78,57 @@
 </app-button>
       </form>
     </div>
+<div *ngIf="cartItems.length === 0; else cartList" class="emptyCart">
+     <p>Your cart is empty.</p>
+     </div>
+    
+     <ng-template #cartList>
 
     <div class="products">
-      hello2
+      
+      <div class="eachProduct" *ngFor="let item of cartItems">
+        <div class="img">
+        <img [src]="item.product.image" alt="">
+        </div>
+        <div class="title">
+        <p>{{item.product.title}}</p>
+       <span [style.color]="item.color">color</span><br>
+      <span class="color">size:{{item.size}}</span><br>
+        <span class="color">quantity:{{item.quantity}}</span>
+
+        </div>
+        <div class="price">
+         ${{item.product.price*item.quantity}}
+        </div>
+      </div>
+      <div class="productInfo">
+        <div class="inputDiscount">
+        <mat-form-field appearance="outline" class="wide-field" floatLabel="always">
+            <mat-label>Discount Code</mat-label>
+            <input matInput formControlName="country" />
+          </mat-form-field>
+          </div>
+          <div class="buttonDiscount">
+        <app-button
+      label="Apply"
+    appearance="primary"
+    type="submit">
+    </app-button>
+          </div>
+          </div>
+          <div class="total">
+            <div class="subtotal">
+              <p>Shipping</p>
+              <p>$40.00</p>
+            </div>
+            <div class="subtotal">
+              <p>Total</p>
+              <p class="totalPrice">${{getTotalCost()+40}}</p>
+            </div>
+          </div>
+
     </div>
+    </ng-template>
   </div>
 </div>
 
