--- a/ecommerce-angular/src/app/layout/header/header.component.html
+++ b/ecommerce-angular/src/app/layout/header/header.component.html
@@ -32,7 +32,13 @@
       <!-- Right side of navbar -->
       <div class="d-flex align-items-center gap-3">
         <!-- If NOT logged in: show Sign in / Sign up -->
-        <ng-container *ngIf="authService.isLoggedIn(); else guestButtons">
+        <ng-container *ngIf="authService.isLoggedIn() && authService.isAdmin();">
+        <button class="btn btn-outline-danger btn-sm ms-2" (click)="logout()">
+    <i class="bi me-1"></i> Logout
+     </button>
+  <a routerLink="/admin" class="btn btn-outline-primary">Dashboard</a>
+        </ng-container>
+        <ng-container *ngIf="authService.isLoggedIn() && !authService.isAdmin(); else guestButtons">
           <div class="HeaderIcons">
  
 
@@ -53,7 +59,7 @@
   </a>
 
   <!-- Logout Button -->
-  <button class="btn btn-outline-danger btn-sm ms-2" (click)="logout()">
+  <button class="btn btn-outline-danger btn-sm ms-2 border-0" (click)="logout()">
     <i class="bi me-1"></i> Logout
   </button>
   </div>
